# ToDoAI

./: .env  package-lock.json  pyproject.toml
todoai-Flask/: api.py  app.py  pyproject.toml
todoai-Flask/templates/: login.html
todoai-React/src/: App.css  App.module.css  App.tsx  main.tsx
todoai-React/src/components/Header/: Header.css  Header.tsx
todoai-React/src/components/Navbar/: Navbar.css  Navbar.tsx
todoai-React/src/components/Navbar/Navbar-button/: Navbar-button.css  Navbar-button.tsx
todoai-React/src/components/Product/: Product.css  Product.tsx
todoai-React/src/components/Sidebar/: Sidebar.module.css  Sidebar.tsx
todoai_Django/: .gitignore  manage.py  pyproject.toml
todoai_Django/goals/: admin.py  models.py  serializer.py  urls.py  views.py
todoai_Django/goals/migrations/: 0001_initial.py  0002_todoitem_finished_at.py  0003_alter_todoitem_is_completed.py  0004_todoitem_processed_text.py
todoai_Django/todoai/: apps.py  urls.py
todoai_Django/todoai_Django/: asgi.py  settings.py  urls.py  wsgi.py
todoai_Django/users/: serializer.py  urls.py  views.py
todoai_React/: .gitignore  package-lock.json  package.json
todoai_React/src/: App.module.css  data.json  main.tsx
todoai_React/src/components/Navbar/: Navbar.tsx
todoai_React/src/components/Navbar/Navbar-button/: Navbar-button.tsx
todoai_React/src/components/Product/: Product.module.css
todoai_React/src/components/ui/: Router.tsx
todoai_React/src/models/: interfaces.tsx
todoai_React/src/service/: auth.service.tsx  register.service.tsx  task.service.tsx
(+40 files in other folders)
